--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -365,9 +365,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rvTo_KN0WYs7",
-        "outputId": "ad193ce4-eded-44e4-f79d-f1f7ecbacaa1"
+        "outputId": "257e92ef-acf0-4733-b6f3-73d688cc551b"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,52 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load the iris dataset\n",
+        "from sklearn.datasets import load_iris\n",
+        "iris = load_iris()\n",
+        "\n",
+        "# store the feature matrix (X) and response vector (y)\n",
+        "X = iris.data\n",
+        "y = iris.target\n",
+        "\n",
+        "# splitting X and y into training and testing sets\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=1)\n",
+        "\n",
+        "# training the model on training set\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "gnb = GaussianNB()\n",
+        "gnb.fit(X_train, y_train)\n",
+        "\n",
+        "# making predictions on the testing set\n",
+        "y_pred = gnb.predict(X_test)\n",
+        "\n",
+        "# comparing actual response values (y_test) with predicted response values (y_pred)\n",
+        "from sklearn import metrics\n",
+        "print(\"Gaussian Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)\n"
+      ],
+      "metadata": {
+        "id": "Ig3Lz7iUmbuX",
+        "outputId": "b98e6a4d-05e2-4106-9213-265a1b22ca92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gaussian Naive Bayes model accuracy(in %): 95.0\n"
+          ]
         }
       ]
     },
